--- a/css1.html
+++ b/css1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assign1</title>
-    <link rel="stylesheet" href="./assign.css"> 
+    <link rel="stylesheet" href="./assign1.css"> 
        
 </head>
 <body>
