--- a/Cssassign1.html
+++ b/Cssassign1.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assign1</title>
-    <link rel="stylesheet" href="./assign.css"> 
+    <title>CSS1</title>
+    <link rel="stylesheet" href="./test2.css"> 
        
 </head>
 <body>
-  <h2>This is First Css Assignment</h2><hr>
+  <h1>This is First Css Assignment</h1><hr>
  <b><i>What is Css?</i>
  </b><br>
  
@@ -39,6 +39,6 @@
 
 <p>There is a wide range of selectors available . Two of the most commonly used are Class and ID . Both are used to target elements to which a style should be applied.</p>
 
-<a href="http://127.0.0.1:5500/Elevation%20Academy/CSS%20Assignments/test3.html"><i><span class="yut"> prepbytes Home</span></i></a>
+<a href="http://127.0.0.1:5500/Elevation%20Academy/CSS%20Assignments/practice.html"><i><span class="yut"> prepbytes Home</span></i></a>
 </body>
  </html> 
