--- a/practice5.html
+++ b/practice5.html
@@ -10,41 +10,59 @@
     <link rel="stylesheet" href="./add2.css">
 </head>
 <body>
-    <div class="s2">
-      <div class="sra">
-      <div class="hr1"></div>
-      <div class="heading">Trip to Paris</div>
-      <div class="hr2"></div>
-      <div class="arrow2">
-          <span class="material-icons">
-              arrow_circle_left
-              </span>&nbsp;&nbsp;Back <br><br><br>
+  <div class="notshow">
+    <div class="cardcontianer3">
+      <div class="boxcontainer">
+        <div class="hr1"></div>
+        <div class="trip">Trip To Paris</div>
+        <div class="hr2"></div>
+        <div id="arrow1">
+          <a href="./Todo2.html">
+            <span class="material-icons">
+                arrow_circle_left
+                </span>
+          </a>
+        </div>
       </div>
-      
-      <div class="border">
-          <div class="page1">Trip to Paris <hr>
-          <span class="p1">Completed Task</span><br><br>
-          <div class="checkbox">
-          <input type="checkbox" name="checkbox">
-          <label for="checkbox">Pending Task</label><br><br>
-          <div class="arrow1">
-              <span class="material-icons">
-                   add_circle
-                    </span>
-          </div>
-          
+
+      <div class="upper-container4">
+        <div id="arrow">
+          <a href="./practice3.html">
+            <span class="material-icons">
+              add_circle
+           </span> 
+          </a>
+        </div>
+        <div id="back">Back</div>
       </div>
-          </div>
-      </div>
+
+      <div class="card4">
+        <div class="div4">
+          <p>Trip to Paris</p>
+        </div>
+        <div class="div5">
+          <p>Completed Task</p>
+        </div>
+        <div class="div6">
+          <form>
+            <input type="checkbox" id="check" name="todoo" />
+            <label for="todo">Pending Task</label>
+          </form>
+        </div>
+        <div id="circle1">
+          <a href="./practice4.html">
+            <span class="material-icons">
+              add_circle
+           </span>
+          </a>
+        </div>
       </div>
     </div>
-  <div class="item2">
-    <h4>Add New Item</h4>
-    <input type="text" placeholder=""><br><br>
-    <div class="abc">
-      ADD
-    </div>
-</div>  
-  
+  </div>  
+  <div class="pop-up">
+    <p id="add-new">Add New Item</p>
+    <input type="text" class="pop-upbar" />
+    <button class="pop-upbutton" id="demo" type="button">ADD</button>
+  </div> 
 </body>
 </html>
