--- a/page1.html
+++ b/page1.html
@@ -4,31 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./page1.css">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
+    <link rel="stylesheet" href="./a2.css">
 </head>
 <body>
-    <div class="heading"><h1>Try To replicate this</h1></div>
-    
-    <div class="container">
-            <div class="num">1.</div>
-            <div class="box1"></div>
-            <div class="num">2.</div>
-            <div class="box2"></div>
-            <div class="num">3.</div>
-            <div class="box3"></div>
-            <div class="num">4.</div>
-            <div class="box4"></div>
-            <div class="num">5.</div>
-            <div class="box5"></div>
-            <div class="num">6.</div>
-            <div class="box6"></div>
-            <div class="num">7.</div>
-            <div class="box7"></div>
-             </div>
-     
-     <div class="back"><a href="./Cssassign5.html">Back</a></div>
-     <div class="next"><a href="./page2.html">Next</a></div>
-    </div>   
+    <div class="cardcontianer3">
+        <div class="boxcontainer">
+          <div class="hr1"></div>
+          <div class="trip">Trip To Paris</div>
+          <div class="hr2"></div>
+          <div id="arrow1">
+            <a href="./Todo2.html">
+              <span class="material-icons">
+                arrow_circle_left
+                </span>
+            </a>
+          </div>
+        </div>
+  
+        <div class="upper-container4">
+          <div id="arrow">
+            <a href="./Todo2.html">
+              <span class="material-icons">
+                arrow_circle_left
+                </span>
+            </a> 
+          </div>
+          <div id="back">Back</div>
+        </div>
+  
+        <div class="card4">
+          <div class="div4">
+            <p>Trip to Paris</p>
+          </div>
+          <div class="div5">
+            <p>Completed Task</p>
+          </div>
+          <div class="div6">
+            <form>
+              <input type="checkbox" id="check" name="todoo" />
+              <label for="todo">Pending Task</label>
+            </form>
+          </div>
+          <div id="circle1">
+            <a href="./page3.html">
+              <span class="material-icons">
+                add_circle
+             </span>
+            </a>
+          </div>
+        </div>
+      </div>   
 </body>
 </html>
