--- a/Cssassign5.html
+++ b/Cssassign5.html
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="page1">
-      <a href="./page1.html">Lets go and try another things</a>
+      <a href="./b1.html">Lets go and try another things</a>
       </div>
 
 
